--- a/BlogApplication/src/main/resources/application.properties
+++ b/BlogApplication/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
 
+# Server Configuration
 server.servlet.context-path=/api
+server.port=8080
+
