--- a/BlogApplication/src/main/resources/application.properties
+++ b/BlogApplication/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA & Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Server Configuration
 server.servlet.context-path=/api
 server.port=8080
 
+# JWT Configuration
+jwt.secret=dev-secret-key-change-in-production-min-32-chars
+jwt.access.expiration=900000
+jwt.refresh.expiration=604800000
+jwt.issuer=BlogApplication
